--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,38 @@
 	animation: backgroundflash 5s forwards; 
 }
 
+#flashf {
+	background-color:red;
+	animation: backgroundflash 5s forwards; 
+}
+
 .slider{
 	background: url("/images/sostenible2.jpg");
 	height: 100vh;
 	background-size: cover;
 	background-position: center; 
   }
+
+  .black{
+	  color:black;
+  }
+  .algright{
+	text-align: right;
+  }
+  .btn-send {
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    width: 80%;
+    margin-left: 3px
+}
+
+.help-block.with-errors {
+    color: #ff5050;
+    margin-top: 5px
+}
+
+.card {
+    margin-left: 10px;
+    margin-right: 10px
+}
