--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -14,6 +14,7 @@ html {
 
 body {
   margin: 0;
+
 }
 img.zoom {
   width: 350px;
@@ -7510,6 +7511,106 @@ a.bg-inverse:focus, a.bg-inverse:hover {
   margin: 0;
   overflow: visible;
   clip: auto;
+}
+.list-inline-item:not(:last-child) {
+  margin-right: .5rem;
+}
+.contacts-social a {
+  font-size: 16px;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  background: #ffffff;
+  border: 1px solid #eeecec;
+  text-align: center;
+  border-radius: 50%;
+  color: #2b2a2a;
+}
+.bg-facebook {
+  background-color: #3b5998!important;
+}
+.bg-twitter {
+  background-color: #55acee!important;
+}
+.bg-linkedin {
+  background-color: #0976b4!important;
+}
+.textoverflow{
+  width: 160px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+}
+.btnreadmore{
+  color:#fff;
+}
+.textoverflowl{
+  width: 300px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+}
+.textoverflowdesc{
+  width: 600px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      -webkit-line-clamp: 4;
+      -webkit-box-orient: vertical;
+}
+.linkblanco{
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.linknegro{
+  color: #000;
+  text-decoration: none;
+}
+
+.linknegro:hover{
+  color: gray;
+  text-decoration: none;
+}
+.linkblanco:hover{
+  color: gray;
+  text-decoration: none;
+}
+
+.vl {
+  border-left: 6px solid green;
+  height: 570px;
+}
+.floatright{
+  float:right;
+}
+.floatleft{
+  float:left;
+}
+.marginauto{
+  margin-left: auto;
+  margin-right: auto;
+}
+.radius-15 {
+  border-radius: 15px;
+}
+.texto-encima{
+  position: absolute; 
+  bottom:20px;
+  left: 50px;
+  color: #FFF;
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: .25rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
 }
 
 .w-25 {
