--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3272,7 +3272,14 @@ tbody.collapse.show {
   overflow: hidden;
   background-color: #eceeef;
 }
-
+#imagenbig {
+  width: 500px;
+  height: 500px;
+}
+#imagenbigadmin {
+  width: 100%;
+  height: 100%;
+}
 .dropdown-item {
   display: block;
   width: 100%;
